--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: page
 title: "主页"
 description: "「离开世界之前 一切都是过程」"
+header-mask: 0.3
+multilingual: true
 ---
 
 {% for post in paginator.posts %}
